# rss-feed

./: .gitignore  .token_alert_state.json  README.md  aggregated_comments_feed.xml  announcement_banner.py  arc_history.json  comments.py  config_loader.py  dh_comments.py  feed_common.py  feed_guid_gate.py  free_chapters_feed.xml  free_chapters_feed_C1.xml  free_feed_generator.py  host_utils.py  mappings.py  message_renderer.py  message_settings.py  mistmint_state.json  new_arc_rss_checker.py  novel_card_targets.json  novel_mappings.py  novel_status_targets.json  paid_chapters_feed.xml  paid_chapters_feed_C1.xml  paid_feed_generator.py  paid_history.json  pyproject.toml  requirements.txt  rss-feed-publish-single-target-role-map.patch  send_token_alert.py  update_novel_status.py
.github/workflows/: README.md  create_novel_toml.yml  delete-discord-message.yml  delete_discord_today.yml  fix_atvhe_title.yml  healthcheck.yml  monthly_revenue.yml  (+12 more)
.github/workflows /: update_dh_feed.yml  update_feed.yml
config/: integrations.README.md  integrations.json  runtime.README.md  runtime.json  source_modes.README.md  source_modes.json
docs/: rss-template-placeholders.md
feed_api/: send_feed_api_alert.py
host_utils/: __init__.py  host_dragonholic.py  host_mistmint.py  host_nu_comments.py  host_titv.py
host_utils_test/: __init__.py
manual_scripts/: paid_history.json
mappings/: output_feeds.toml
message_templates/: feed_api_alert.toml  membership_update.toml  nu_weekly_readers.toml  publish_single_novel.toml  revenue_report.toml  special_announcement.toml  token_alert.toml
novelupdates/: nu_readers.json  nu_weekly_readers.py
revenue/: report.py  state.json
snapshots/: diagnostics.json
token/: send_token_alert.py  token_alert_state.json
tools/: audit_dead_host_utils.py  create_novel_toml.py  delete_discord_messages.py  delete_discord_today.py  fix_atvhe_title.py  healthcheck.py  load-env.ps1  publish_membership_update.py  publish_novel_card.py  publish_single_novel.py  publish_special_announcement.py  update_novel_card.py  update_novel_integrations.py  update_novel_status.py
(+25 files in other folders)
