[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cannibal-turtle-rss-feed"
version = "0.1.0"
description = "Mapping data for Cannibal Turtle RSS feeds"
authors = [ { name = "Cannibal Turtle" } ]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = [
  "tomli>=2.0.1; python_version < '3.11'",
]
classifiers = [
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/Cannibal-Turtle/rss-feed"

[tool.setuptools]
py-modules = [
  "novel_mappings",
]
packages = [
  "mappings",
]

[tool.setuptools.package-data]
mappings = [
  "hosts/*.toml",
  "novels/*.toml",
  "output_feeds.toml",
]
